other figures also from subdirectory

--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@ html {
         <p>
             <a href="https://scholar.google.fr/citations?user=hc8oTTwAAAAJ&hl=en&oi=ao" target="_blank"> <img
                     style="width: 25px; height: 25px;" alt="Google Scholar"
-                    src="https://www-sop.inria.fr/members/Mathieu.Desroches/temp/google-scholar.png"></a> <a
+                    src="figures/google-scholar.png"></a> <a
                 href="https://orcid.org/0000-0002-9260-2521" target="_blank"> <img
                 style="width: 25px; height: 25px;" alt="ORCID"
-                src="https://www-sop.inria.fr/members/Mathieu.Desroches/temp/ORCIDiD_icon128x128.png"></a>
+                src="figures/ORCIDiD_icon128x128.png"></a>
         </p>
 
         <h2>Publications</h2>
@@ -339,7 +339,7 @@ Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>in preparation</em>.
             <li>- <a class="other_links" href="https://www.danieleavitabile.com/icmns2021digital/" target="_blank">2021
                 International Conference on Mathematical Neuroscience</a>: <a href="https://www.youtube.com/watch?v=Db2Y68y4Prg" target="_blank"> <img
                     style="width: 30px; vertical-align: text-bottom" alt="Youtube"
-                    src="https://www-sop.inria.fr/members/Mathieu.Desroches/temp/yt_icon_rgb.png"></a>
+                    src="figures/yt_icon_rgb.png"></a>
             </li>
             <li>- <a class="other_links" href="http://schedule.smb2021.org/NEUR/NEUR-MS01.html" target="_blank">Virtual
                 SMB
@@ -349,7 +349,7 @@ Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>in preparation</em>.
             <li>- <a class="other_links" href="https://www.danieleavitabile.com/ddd2020/" target="_blank">Dynamics Days
                 Digital 2020</a>: <a href="https://www.youtube.com/watch?v=G4nvSkxQYmQ" target="_blank"> <img
                     style="width: 30px; vertical-align: text-bottom" alt="Youtube"
-                    src="https://www-sop.inria.fr/members/Mathieu.Desroches/temp/yt_icon_rgb.png"></a>
+                    src="figures/yt_icon_rgb.png"></a>
             </li>
 
         </ul>
