contact and submitted paper

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ html {
             <li><p>
             <u>L. Lemaire</u>, M. Desroches, M. Krupa and M. Mantegazza. Idealized multiple-timescale model of
 cortical spreading depolarization initiation and pre-epileptic hyperexcitability caused by
-Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>in preparation</em>.
+Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>submitted</em>.
         </p></li>
             <li><p>
             <u>L. Lemaire</u>, M. Desroches, M. Krupa, L. Pizzamiglio, P Scalmani and M. Mantegazza. <a
@@ -526,14 +526,15 @@ Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>in preparation</em>.
 
         <p>
             <a class="other_links"
-               href="mailto:louisiane.lemaire@inria.fr">louisiane.lemaire@inria.fr</a>
+               href="mailto:louisiane.lemaire@hu-berlin.de">louisiane.lemaire@hu-berlin.de</a>
         </p>
 
         <p>
-            Inria Sophia Antipolis - Méditerranée Research Centre<br>
-            2004 route des Lucioles - BP 93<br>
-            06902 Sophia Antipolis Cedex
-            France
+            Institute for Theoretical Biology<br>
+            Humboldt-Universität zu Berlin<br>
+            Philippstrasse 13, Haus 4<br>
+            10115 Berlin<br>
+            Germany
         </p>
 
     </div>
