description current work

--- a/index.html
+++ b/index.html
@@ -205,17 +205,13 @@ html {
             <tr>
                 <td class="picture_me"><img src="figures/me.jpg"
                                            width="260px" height="260px" hspace="25px"></td>
-                <td >
-                    I am a third year <strong>PhD student in Applied Mathematics</strong> at the <a class="other_links"
-                                                                                                    href="https://www.inria.fr/en/centre-inria-sophia-antipolis-mediterranee"
-                                                                                                    target="_blank">Inria
-                    Sophia Antipolis - Méditerranée Research Centre</a> (France), in the <a class="other_links"
-                                                                                              href="https://team.inria.fr/mathneuro/"
-                                                                                              target="_blank">MathNeuro</a>
-                    team.
+                    <td >
+                    I am a postdoc researcher at the <a class="other_links"href="https://itb.biologie.hu-berlin.de"
+                                                                           target="_blank">Institute for Theoretical Biology</a> at Humboldt-Universität zu Berlin.
+                    I work in the <a class="other_links"href="https://www.neuron-science.de/"target="_blank">Computational Neurophysiology group</a> of Susanne Schreiber.
                     </p>
 
-                    <p>
+                    <!-- <p>
                         My supervisors are <a class="other_links"
                                               href="http://www-sop.inria.fr/members/Mathieu.Desroches/" target="_blank">Mathieu
                         Desroches</a> and <a class="other_links"
@@ -224,7 +220,7 @@ html {
                                                                     href="http://cvscience.aviesan.fr/cv/579/massimo-mantegazza"
                                                                     target="_blank">Massimo Mantegazza</a> from the <a
                             class="other_links" href="https://www.ipmc.cnrs.fr/cgi-bin/site.cgi?nompage=accueil&lang=en"
-                            target="_blank">Institute of Molecular and Cellular Pharmacology</a> (France).</p>
+                            target="_blank">Institute of Molecular and Cellular Pharmacology</a> (France).</p> -->
 
                 </td>
             </tr>
