--- a/index.html
+++ b/index.html
@@ -234,10 +234,11 @@ html {
             <ul class="no_symbol">
                 <li>- Computational neuroscience</li>
                 <li>- Bifurcation theory</li>
+                <li>- Saddle node loop bifurcation</li>
+                <li>- QIF neuron with potassium dynamics</li>
                 <li>- Slow-fast dynamics</li>
                 <li>- Conductance-based models with dynamic ion concentrations</li>
                 <li>- Mutations of the Na<sub>V</sub>1.1 channel (hemiplegic migraine and epilepsy)</li>
-                <li>- Depolarization block</li>
             </ul>
 
             </p>
