little modif description page

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ html {
                 <td class="picture_me"><img src="figures/me.jpg"
                                            width="260px" height="260px" hspace="25px"></td>
                     <td >
-                    I am a postdoc researcher at the <a class="other_links"href="https://itb.biologie.hu-berlin.de"
+                    I am a postdoc researcher in <strong>computational neuroscience<strong> at the <a class="other_links"href="https://itb.biologie.hu-berlin.de"
                                                                            target="_blank">Institute for Theoretical Biology</a> at Humboldt-Universität zu Berlin.
                     I work in the <a class="other_links"href="https://www.neuron-science.de/"target="_blank">Computational Neurophysiology group</a> of Susanne Schreiber.
                     </p>
@@ -232,9 +232,8 @@ html {
         <div class="topics">
             <p><strong>Research interests</strong>:
             <ul class="no_symbol">
-                <li>- Computational neuroscience</li>
                 <li>- Bifurcation theory</li>
-                <li>- Saddle node loop bifurcation</li>
+                <li>- Saddle-node loop bifurcation</li>
                 <li>- QIF neuron with potassium dynamics</li>
                 <li>- Slow-fast dynamics</li>
                 <li>- Conductance-based models with dynamic ion concentrations</li>
