forgot to close strong

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ html {
                 <td class="picture_me"><img src="figures/me.jpg"
                                            width="260px" height="260px" hspace="25px"></td>
                     <td >
-                    I am a postdoc researcher in <strong>computational neuroscience<strong> at the <a class="other_links"href="https://itb.biologie.hu-berlin.de"
+                    I am a postdoc researcher in <strong>computational neuroscience</strong> at the <a class="other_links"href="https://itb.biologie.hu-berlin.de"
                                                                            target="_blank">Institute for Theoretical Biology</a> at Humboldt-Universität zu Berlin.
                     I work in the <a class="other_links"href="https://www.neuron-science.de/"target="_blank">Computational Neurophysiology group</a> of Susanne Schreiber.
                     </p>
