change stuff presentation page

--- a/index.html
+++ b/index.html
@@ -206,21 +206,13 @@ html {
                 <td class="picture_me"><img src="figures/me.jpg"
                                            width="260px" height="260px" hspace="25px"></td>
                     <td >
+                    <p>
                     I am a postdoc researcher in <strong>computational neuroscience</strong> at the <a class="other_links"href="https://itb.biologie.hu-berlin.de"
                                                                            target="_blank">Institute for Theoretical Biology</a> at Humboldt-Universität zu Berlin.
-                    I work in the <a class="other_links"href="https://www.neuron-science.de/"target="_blank">Computational Neurophysiology group</a> of Susanne Schreiber.
                     </p>
 
-                    <!-- <p>
-                        My supervisors are <a class="other_links"
-                                              href="http://www-sop.inria.fr/members/Mathieu.Desroches/" target="_blank">Mathieu
-                        Desroches</a> and <a class="other_links"
-                                             href="https://math.unice.fr/laboratoire/fiche%26id%3D803.html" target="_blank">Martin
-                        Krupa</a>. We work in collaboration with <a class="other_links"
-                                                                    href="http://cvscience.aviesan.fr/cv/579/massimo-mantegazza"
-                                                                    target="_blank">Massimo Mantegazza</a> from the <a
-                            class="other_links" href="https://www.ipmc.cnrs.fr/cgi-bin/site.cgi?nompage=accueil&lang=en"
-                            target="_blank">Institute of Molecular and Cellular Pharmacology</a> (France).</p> -->
+                    <p>
+                    I work in the <a class="other_links"href="https://www.neuron-science.de/"target="_blank">Computational Neurophysiology group</a> of Susanne Schreiber.</p>
 
                 </td>
             </tr>
