--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>submitted</em>.
         <table class="cv_table">
             <tbody>
             <tr>
-                <td class="year">Since 2018</td>
+                <td class="year">2018-21</td>
                 <td><strong>PhD in Applied Mathematics</strong></br>Inria Sophia Antipolis - Méditerranée
                     Research
                     Centre,
@@ -459,6 +459,13 @@ Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>submitted</em>.
 
         <table class="cv_small_table">
             <tbody>
+              <tr>
+                  <td>2022</td>
+                  <td>
+                      ICMNS parallel session on <a class="other_links" href="https://www.danieleavitabile.com/icmns2022digital/" target="_blank">Dynamical systems for neurological disorders</a>
+                  </td>
+              </tr>
+
             <tr>
                 <td>2021</td>
                 <td>
@@ -473,6 +480,8 @@ Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>submitted</em>.
                     Member of the <a class="other_links" href="https://phd-seminars-sam.inria.fr/momi2021/" target="_blank">Inria Sophia Antipolis PhD Seminars</a> organizing committee
                 </td>
             </tr>
+
+
 
             </tbody>
         </table>
