--- a/index.html
+++ b/index.html
@@ -375,13 +375,20 @@ Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>submitted</em>.
                 <td><strong>PhD in Applied Mathematics</strong></br>Inria Sophia Antipolis - Méditerranée
                     Research
                     Centre,
-                    France </br><strong>"Initiation of cortical spreading depolarization and pre-epileptic hyperactivity in a multiscale mathematical model of Na<sub>V</sub>1.1 mutations"</strong></br>
+                    France </br><strong>"Initiation of cortical spreading depolarization and pre-epileptic hyperactivity in a multiscale mathematical model of Na<sub>V</sub>1.1 mutations"</strong>: <a href="https://www.youtube.com/watch?v=roBs90wMBdY" target="_blank"> <img
+                        style="width: 30px; vertical-align: text-bottom" alt="Youtube"
+                        src="figures/yt_icon_rgb.png"></a></br>
                     Supervisors: <a class="other_links"
                                     href="http://www-sop.inria.fr/members/Mathieu.Desroches/" target="_blank">Mathieu
                         Desroches</a> and <a class="other_links"
                                              href="https://math.unice.fr/laboratoire/fiche%26id%3D803.html"
                                              target="_blank">Martin
-                        Krupa</a></td>
+                        Krupa</a></br>
+                        Reporters: <a class="other_links"
+                                        href="https://web.mat.upc.edu/gemma.huguet/" target="_blank">Gemma Huguet</a> and <a class="other_links"
+                                                 href="https://math.nyu.edu/people/profiles/RINZEL_John.html"
+                                                 target="_blank">John Rinzel</a>
+                </td>
             </tr>
             <tr>
                 <td>2017-18</td>
@@ -529,7 +536,7 @@ Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>submitted</em>.
         <p>
             Institute for Theoretical Biology<br>
             Humboldt-Universität zu Berlin<br>
-            Philippstrasse 13, Haus 4<br>
+            <!-- Philippstrasse 13, Haus 4<br> -->
             10115 Berlin<br>
             Germany
         </p>
