--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>submitted</em>.
                     style="width: 30px; vertical-align: text-bottom" alt="Youtube"
                     src="figures/yt_icon_rgb.png"></a>
             </li>
-            <li>- <a class="other_links" href="http://schedule.smb2021.org/NEUR/NEUR-MS01.html" target="_blank">Virtual
+            <li>- <a class="other_links" href="https://www.smb2021.org/" target="_blank">Virtual
                 SMB
                 2021 Annual Meeting</a></li>
             <li>- <a class="other_links" href="https://meetings.siam.org/sess/dsp_programsess.cfm?SESSIONCODE=71545"
@@ -484,7 +484,7 @@ Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>submitted</em>.
             <tr>
                 <td>2021</td>
                 <td>
-                    Member of the <a class="other_links" href="https://phd-seminars-sam.inria.fr/momi2021/" target="_blank">Inria Sophia Antipolis PhD Seminars</a> organizing committee
+                    Member of the <a class="other_links" href="https://phd-seminars-sam.inria.fr/" target="_blank">Inria Sophia Antipolis PhD Seminars</a> organizing committee
                 </td>
             </tr>
 
