phd thesis manuscript

--- a/index.html
+++ b/index.html
@@ -375,7 +375,10 @@ Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>submitted</em>.
                 <td><strong>PhD in Applied Mathematics</strong></br>Inria Sophia Antipolis - Méditerranée
                     Research
                     Centre,
-                    France </br><strong>"Initiation of cortical spreading depolarization and pre-epileptic hyperactivity in a multiscale mathematical model of Na<sub>V</sub>1.1 mutations"</strong>: <a href="https://youtu.be/roBs90wMBdY?t=1117" target="_blank"> <img
+                    France </br><a
+                        class="other_links"
+                        href="https://tel.archives-ouvertes.fr/tel-03642446/file/2021COAZ4102.pdf"
+                        target="_blank">Initiation of cortical spreading depolarization and pre-epileptic hyperactivity in a multiscale mathematical model of Na<sub>V</sub>1.1 mutations</a>: <a href="https://youtu.be/roBs90wMBdY?t=1117" target="_blank"> <img
                         style="width: 30px; vertical-align: text-bottom" alt="Youtube"
                         src="figures/yt_icon_rgb.png"></a></br>
                     Supervisors: <a class="other_links"
