--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ html {
             <li><p>
             <u>L. Lemaire</u>, M. Desroches, M. Krupa and M. Mantegazza. Idealized multiple-timescale model of
 cortical spreading depolarization initiation and pre-epileptic hyperexcitability caused by
-Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>submitted</em>.
+Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>under review</em>.
         </p></li>
             <li><p>
             <u>L. Lemaire</u>, M. Desroches, M. Krupa, L. Pizzamiglio, P Scalmani and M. Mantegazza. <a
@@ -323,6 +323,8 @@ Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>submitted</em>.
 
         <p>
         <ul class="no_symbol">
+          <li>- <a class="other_links" href="https://meetings.siam.org/sess/dsp_programsess.cfm?SESSIONCODE=76066" target="_blank">2023 SIAM Conference on Dynamical Systems</a>
+          </li>
             <li>- <a class="other_links" href="http://icsd2020.univ-lyon1.fr/en/pages/icsd-2021-home" target="_blank">International Conference on Spreading Depolarizations 2021</a></li>
             <li>- <a class="other_links" href="https://www.danieleavitabile.com/icmns2021digital/" target="_blank">2021
                 International Conference on Mathematical Neuroscience</a>: <a href="https://www.youtube.com/watch?v=Db2Y68y4Prg" target="_blank"> <img
@@ -365,6 +367,21 @@ Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>submitted</em>.
     </div>
 
     <div class="container">
+
+      <table class="cv_table">
+          <tbody>
+          <tr>
+              <td class="year">Since 2022</td>
+
+              <td><strong>Postdoctoral researcher</strong></br>
+                Susanne Schreiber's <a class="other_links"href="https://www.neuron-science.de/"target="_blank">Computational Neurophysiology group</a></br>
+                Institute for Theoretical Biology, Humboldt-Universität zu Berlin</br>
+
+              </td>
+          </tr>
+
+          </tbody>
+      </table>
 
         <h2>Education</h2>
 
@@ -505,6 +522,14 @@ Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>submitted</em>.
                 <td>
                     Master course "Mathematical and computational models in neuroscience", 6h</br>
                     Sorbonne Université - Campus Pierre-et-Marie-Curie (Paris)
+                </td>
+            </tr>
+
+            <tr>
+                <td>2023</td>
+                <td>
+                    Master course "Models of Neural Systems", 6h</br>
+                    Humboldt-Universität zu Berlin
                 </td>
             </tr>
 
