--- a/index.html
+++ b/index.html
@@ -225,10 +225,9 @@ html {
             <p><strong>Research interests</strong>:
             <ul class="no_symbol">
                 <li>- Bifurcation theory</li>
-                <li>- Saddle-node loop bifurcation</li>
-                <li>- QIF neuron with potassium dynamics</li>
-                <li>- Slow-fast dynamics</li>
-                <li>- Conductance-based models with dynamic ion concentrations</li>
+                <li>- Model reduction</li>
+                <li>- Multiple-timescale dynamics</li>
+                <li>- Neuron models with dynamic ion concentrations</li>
                 <li>- Mutations of the Na<sub>V</sub>1.1 channel (hemiplegic migraine and epilepsy)</li>
             </ul>
 
@@ -272,10 +271,16 @@ html {
 
         <h2>Publications</h2>
         <ul class="square">
+          <li><p>
+          <u>L. Lemaire</u>, M. Behbood, J. H. Schleimer and S. Schreiber. Integrate-and-fire neuron with potassium dynamics capturing activity-mediated switches in firing regimes, <em>in preparation</em>.
+      </p></li>
             <li><p>
-            <u>L. Lemaire</u>, M. Desroches, M. Krupa and M. Mantegazza. Idealized multiple-timescale model of
-cortical spreading depolarization initiation and pre-epileptic hyperexcitability caused by
-Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>under review</em>.
+            <u>L. Lemaire</u>, M. Desroches, M. Krupa and M. Mantegazza. <a
+                class="other_links"
+                href="https://link.springer.com/article/10.1007/s00285-023-01917-5"
+                target="_blank">Idealized multiple-timescale model of
+    cortical spreading depolarization initiation and pre-epileptic hyperexcitability caused by
+    Na<sub>V</sub>1.1/<i>SCN1A</i></a>, <em>Journal of Mathematical Biology</em> 86 (1), 92, 2023.
         </p></li>
             <li><p>
             <u>L. Lemaire</u>, M. Desroches, M. Krupa, L. Pizzamiglio, P Scalmani and M. Mantegazza. <a
@@ -367,6 +372,7 @@ Na<sub>V</sub>1.1/<i>SCN1A</i>, <em>under review</em>.
     </div>
 
     <div class="container">
+
 
       <table class="cv_table">
           <tbody>
