--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 
         ul.square {
             list-style-type: '- ';
+            margin-bottom: 1cm;
         }
 
         p+ul.no_symbol {
@@ -223,15 +224,16 @@
                         </td>
                         <td>
                             <p>
-                                I am a postdoc researcher in <strong>computational neuroscience</strong> at the <a
-                                    class="other_links" href="https://itb.biologie.hu-berlin.de"
-                                    target="_blank">Institute for Theoretical Biology</a> at Humboldt-Universität zu
-                                Berlin.
+                                I am a postdoc researcher in <strong>mathematical neuroscience</strong> at the <a
+                                    class="other_links" href="https://itb.biologie.hu-berlin.de" target="_blank">Inria
+                                    Branch at the University of Montpellier</a>, in the <a class="other_links"
+                                    href="https://itb.biologie.hu-berlin.de" target="_blank">MathNeuro team</a>.
                             </p>
 
                             <p>
-                                I work in the <a class="other_links" href="https://www.neuron-science.de/"
-                                    target="_blank">Computational Neurophysiology group</a> of Susanne Schreiber.</p>
+                                I part of the <a class="other_links"
+                                    href="https://www-sop.inria.fr/members/Fabien.Campillo/projects/2mds/index.html"
+                                    target="_blank">2MDS project</a> on the multiscale modeling of Dravet syndrome.</p>
 
                         </td>
                     </tr>
@@ -241,13 +243,15 @@
 
 
             <div class="topics">
-                <p><strong>Research interests</strong>:
+                <p><strong>Research interests</strong>
                 <ul class="no_symbol">
+                    <li>- Sodium channelopathies, in particular NaV1.1 channel (hemiplegic migraine and
+                        epilepsy)</li>
+                    <li>- Single neuron excitability</li>
                     <li>- Bifurcation theory</li>
                     <li>- Model reduction</li>
                     <li>- Multiple-timescale dynamics</li>
                     <li>- Neuron models with dynamic ion concentrations</li>
-                    <li>- Mutations of the Na<sub>V</sub>1.1 channel (hemiplegic migraine and epilepsy)</li>
                 </ul>
 
                 </p>
@@ -291,8 +295,16 @@
                 <li>
                     <p>
                         <u>L. Lemaire</u>, M. Behbood, J. H. Schleimer and S. Schreiber. Integrate-and-fire neuron with
-                        potassium dynamics capturing activity-mediated switches in firing regimes, <em>in
+                        potassium dynamics that capture switches in neuronal excitability class and firing regime,
+                        <em>in
                             preparation</em>.
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        M. Behbood, <u>L. Lemaire</u>, J. H. Schleimer and S. Schreiber. Slow rhythmic activity from an
+                        interplay of voltage and extracellular concentration dynamics: a minimal biophysical
+                        mechanism for neuronal bursting, <em>under review</em>.
                     </p>
                 </li>
                 <li>
@@ -315,8 +327,8 @@
                             concentration dynamics
                             suggests differential GABAergic mechanisms leading to hyperexcitability in epilepsy and
                             hemiplegic migraine</a>, <em>PLOS Computational Biology</em> 17 (7), e1009239, 2021. Code:
-                        <a class="black_links" href="http://modeldb.yale.edu/267047" target="_blank">
-                            http://modeldb.yale.edu/267047</a>
+                        <a class="black_links" href="https://modeldb.science/267047" target="_blank">
+                            https://modeldb.science/267047</a>
                     </p>
                 </li>
                 <li>
@@ -328,8 +340,8 @@
                             href="https://www.jci.org/articles/view/142203" target="_blank">Initiation of
                             migraine-related cortical spreading depolarization by hyperactivity of GABAergic neurons and
                             Na<sub>V</sub>1.1 channels</a>, <em>The Journal of Clinical Investigation</em> 131 (21),
-                        e142203, 2021. Code: <a class="black_links" href="http://modeldb.yale.edu/267157"
-                            target="_blank">http://modeldb.yale.edu/267157</a>
+                        e142203, 2021. Code: <a class="black_links" href="https://modeldb.science/267157"
+                            target="_blank">https://modeldb.science/267157</a>
                     </p>
                 </li>
                 <li>
@@ -365,14 +377,20 @@
 
 
 
-            <h2>Talks</h2>
+            <h2>Presentations at international conferences</h2>
+
+            <h3>Talks</h3>
 
             <p>
             <ul class="no_symbol">
+                <li>- <a class="other_links" href="https://www.danieleavitabile.com/icmns24/" target="_blank">2024
+                        International Conference on Mathematical Neuroscience</a>
+                </li>
                 <li>- <a class="other_links" href="https://meetings.siam.org/sess/dsp_programsess.cfm?SESSIONCODE=76066"
                         target="_blank">2023 SIAM Conference on Dynamical Systems</a>
                 </li>
-                <li>- <a class="other_links" href="http://icsd2020.univ-lyon1.fr/en/pages/icsd-2021-home"
+                <li>- <a class="other_links"
+                        href="https://www.iscbfm.org/index.php?option=com_jevents&task=icalrepeat.detail&evid=89&Itemid=115&year=2021&month=09&day=20&title=international-conference-on-spreading-depolarizations&uid=02074afd3f4fd6d1679b5151a62ed4a6"
                         target="_blank">International Conference on Spreading Depolarizations 2021</a></li>
                 <li>- <a class="other_links" href="https://www.danieleavitabile.com/icmns2021digital/"
                         target="_blank">2021
@@ -381,7 +399,7 @@
                             style="width: 30px; vertical-align: text-bottom" alt="Youtube"
                             src="figures/yt_icon_rgb.png"></a>
                 </li>
-                <li>- <a class="other_links" href="https://www.smb2021.org/" target="_blank">Virtual
+                <li>- <a class="other_links" href="http://2021.smb.org/" target="_blank">Virtual
                         SMB
                         2021 Annual Meeting</a></li>
                 <li>- <a class="other_links" href="https://meetings.siam.org/sess/dsp_programsess.cfm?SESSIONCODE=71545"
@@ -392,9 +410,28 @@
                             style="width: 30px; vertical-align: text-bottom" alt="Youtube"
                             src="figures/yt_icon_rgb.png"></a>
                 </li>
-
             </ul>
             </p>
+
+            <h3>Posters</h3>
+
+            <p>
+            <ul class="no_symbol">
+                <li>- <a class="other_links"
+                        href="https://bernstein-network.de/en/bernstein-conference/past-bernstein-conferences/bernstein-conference-2023/"
+                        target="_blank">Bernstein
+                        Conference 2023</a>
+                </li>
+                <li>- <a class="other_links"
+                        href="https://cns2023.sched.com/event/1O6tZ/p254-integrate-and-fire-neuron-with-potassium-dynamics-capturing-activity-mediated-switches-in-firing-regimes"
+                        target="_blank">Annual CNS Meeting 2023</a>
+                </li>
+                <li>- <a class="other_links" href="https://web.math.ku.dk/~susanne/ICMNS/" target="_blank">2019
+                        International Conference on Mathematical Neuroscience</a>
+                </li>
+            </ul>
+            </p>
+
 
         </div>
 
@@ -419,16 +456,27 @@
 
         <div class="container">
 
+            <h2>Positions</h2>
 
             <table class="cv_table">
                 <tbody>
+                    <tr>
+                        <td class="year">Current</td>
+
+                        <td><strong>Postdoctoral researcher</strong></br>
+                            <a class="other_links" href="https://team.inria.fr/mathneuro/" target="_blank">MathNeuro
+                                project-team</a></br>
+                            <i>Inria branch of the University of Montpellier, France</i></br>
+
+                        </td>
+                    </tr>
                     <tr>
                         <td class="year">2022-24</td>
 
                         <td><strong>Postdoctoral researcher</strong></br>
                             Susanne Schreiber's <a class="other_links" href="https://www.neuron-science.de/"
                                 target="_blank">Computational Neurophysiology group</a></br>
-                            Institute for Theoretical Biology, Humboldt-Universität zu Berlin</br>
+                            <i>Institute for Theoretical Biology, Humboldt-Universität zu Berlin</i></br>
 
                         </td>
                     </tr>
@@ -442,10 +490,10 @@
                 <tbody>
                     <tr>
                         <td class="year">2018-21</td>
-                        <td><strong>PhD in Applied Mathematics</strong></br>Inria Sophia Antipolis - Méditerranée
-                            Research
-                            Centre,
-                            France </br><a class="other_links"
+                        <td><strong>PhD in Applied Mathematics</strong></br><i>Inria Sophia Antipolis - Méditerranée
+                                Research
+                                Centre,
+                                France</i> </br><a class="other_links"
                                 href="https://tel.archives-ouvertes.fr/tel-03642446/file/2021COAZ4102.pdf"
                                 target="_blank">Initiation of cortical spreading depolarization and pre-epileptic
                                 hyperactivity in a multiscale mathematical model of Na<sub>V</sub>1.1 mutations</a>: <a
@@ -454,19 +502,21 @@
                                     src="figures/yt_icon_rgb.png"></a></br>
                             Supervisors: <a class="other_links"
                                 href="http://www-sop.inria.fr/members/Mathieu.Desroches/" target="_blank">Mathieu
-                                Desroches</a> and <a class="other_links"
+                                Desroches</a>, <a class="other_links"
                                 href="https://math.unice.fr/laboratoire/fiche%26id%3D803.html" target="_blank">Martin
                                 Krupa</a></br>
                             Reporters: <a class="other_links" href="https://web.mat.upc.edu/gemma.huguet/"
-                                target="_blank">Gemma Huguet</a> and <a class="other_links"
+                                target="_blank">Gemma Huguet</a>, <a class="other_links"
                                 href="https://math.nyu.edu/people/profiles/RINZEL_John.html" target="_blank">John
                                 Rinzel</a>
                         </td>
                     </tr>
                     <tr>
                         <td>2017-18</td>
-                        <td><strong>MSc in Applied Mathematics</strong></br>Universitat Politècnica de Catalunya (UPC),
-                            Barcelona </br>Thesis: Mathematical modeling of metabolic symbiosis in tumour growth</br>
+                        <td><strong>MSc in Applied Mathematics</strong></br><i>Universitat Politècnica de Catalunya
+                                (UPC),
+                                Barcelona</i> </br>Thesis: Mathematical modeling of metabolic symbiosis in tumour
+                            growth</br>
                             Supervisor:
                             <a class="other_links" href="https://sites.google.com/site/tomasalarc/home"
                                 target="_blank">Tomás
@@ -477,23 +527,23 @@
                         <td>2016-17</td>
                         <td>
                             <strong>M1 (first year of master) in Applied Mathematics and Statistics</strong></br>
-                            Université Claude Bernard Lyon 1 </br>
+                            <i>Université Claude Bernard Lyon 1</i> </br>
                         </td>
                     </tr>
                     <tr>
                         <td>2013-16</td>
                         <td>
                             <strong>BSc in Biology</strong> </br>
-                            Université Pierre-et-Marie-Curie (UPMC, Paris 6) </br>
+                            <i>Université Pierre-et-Marie-Curie (UPMC, Paris 6)</i> </br>
 
                             <table class="cv_inner_table">
                                 <tbody>
                                     <tr>
                                         <td class="year">2016</td>
                                         <td>Internship: Kalman filter for the tracking of bacterial motion</br>
-                                            Technische Universität Darmstadt, Germany </br>
+                                            <i>Technische Universität Darmstadt, Germany</i> </br>
                                             Supervisor: <a class="other_links"
-                                                href="https://www.bcs.tu-darmstadt.de/bcs_team/koepplheinz.en.jsp"
+                                                href="https://www.bcs.tu-darmstadt.de/team_sos/koepplheinz_sos.en.jsp"
                                                 target="_blank">Heinz Köppl</a>
                                         </td>
                                     </tr>
@@ -507,7 +557,7 @@
                                         <td>2015</td>
                                         <td> Internship: Bayesian analysis for the demographic history of right
                                             whales</br>
-                                            University of St Andrews, Scotland </br>
+                                            <i>University of St Andrews, Scotland</i> </br>
                                             Supervisor: <a class="other_links"
                                                 href="https://risweb.st-andrews.ac.uk/portal/en/persons/oscar-eduardo-gaggiotti(43985656-390b-478e-b9a7-05fe88181e46).html"
                                                 target="_blank">Oscar
@@ -521,9 +571,9 @@
                                             R package <a class="other_links"
                                                 href="https://cran.r-project.org/web/packages/abc/"
                                                 target="_blank">Tools for Approximate Bayesian Computation</a></br>
-                                            Université Grenoble-Alpes, France </br>
+                                            <i>Université Grenoble-Alpes, France</i> </br>
                                             Supervisor: <a class="other_links"
-                                                href="http://membres-timc.imag.fr/Michael.Blum/index.html"
+                                                href="https://scholar.google.com/citations?user=fdlAwq8AAAAJ&hl=fr&oi=ao"
                                                 target="_blank">Michael
                                                 Blum</a>
                                         </td>
@@ -578,21 +628,20 @@
             <table class="cv_small_table">
                 <tbody>
                     <tr>
-                        <td>2021</td>
-                        <td>
-                            Master course "Mathematical and computational models in neuroscience", 6h</br>
-                            Sorbonne Université - Campus Pierre-et-Marie-Curie (Paris)
-                        </td>
-                    </tr>
-
-                    <tr>
                         <td>2023</td>
                         <td>
                             Master course "Models of Neural Systems", 6h</br>
-                            Humboldt-Universität zu Berlin
+                            Bachelor course ”Quantitative biology”, 6h</br>
+                            <i>Humboldt-Universität zu Berlin</i>
                         </td>
                     </tr>
-
+                    <tr>
+                        <td>2021</td>
+                        <td>
+                            Master course "Mathematical and computational models in neuroscience", 6h</br>
+                            <i>Sorbonne Université - Campus Pierre-et-Marie-Curie, Paris</i>
+                        </td>
+                    </tr>
                 </tbody>
             </table>
 
@@ -617,15 +666,15 @@
         <div class="container">
 
             <p>
-                <a class="other_links" href="mailto:louisiane.lemaire@hu-berlin.de">louisiane.lemaire@hu-berlin.de</a>
+                <a class="other_links" href="mailto:louisiane.lemaire@inria.fr">louisiane.lemaire@inria.fr</a>
             </p>
 
             <p>
-                Institute for Theoretical Biology<br>
-                Humboldt-Universität zu Berlin<br>
-                <!-- Philippstrasse 13, Haus 4<br> -->
-                10115 Berlin<br>
-                Germany
+                Inria branch of the University of Montpellier<br>
+                Bât 5 - CC05 017, office 03/142<br>
+                860 rue Saint-Priest<br>
+                34095 Montpellier Cedex 5<br>
+                France
             </p>
 
         </div>
