fix wrong links

--- a/index.html
+++ b/index.html
@@ -225,9 +225,11 @@
                         <td>
                             <p>
                                 I am a postdoc researcher in <strong>mathematical neuroscience</strong> at the <a
-                                    class="other_links" href="https://itb.biologie.hu-berlin.de" target="_blank">Inria
+                                    class="other_links"
+                                    href="https://www.inria.fr/en/inria-branch-university-montpellier"
+                                    target="_blank">Inria
                                     Branch at the University of Montpellier</a>, in the <a class="other_links"
-                                    href="https://itb.biologie.hu-berlin.de" target="_blank">MathNeuro team</a>.
+                                    href="https://team.inria.fr/mathneuro/" target="_blank">MathNeuro team</a>.
                             </p>
 
                             <p>
