update intro text (separate tools from questins)

--- a/index.html
+++ b/index.html
@@ -245,15 +245,18 @@
 
 
             <div class="topics">
-                <p><strong>Research interests</strong>
+                <p><strong>Research interests</strong></p>
+                <p>
+                    I study how changes at the level of individual neurons (ion channels mutation, firing-induced
+                    fluctuations in ion concentrations) affect their excitability, and the
+                    consequences on neuronal networks.</p>
+                <p>
+                    Tools:
                 <ul class="no_symbol">
-                    <li>- Sodium channelopathies, in particular NaV1.1 channel (hemiplegic migraine and
-                        epilepsy)</li>
-                    <li>- Single neuron excitability</li>
-                    <li>- Bifurcation theory</li>
+                    <li>- Bifurcation theory, multiple-timescale dynamics</li>
+                    <li>- Conductance-based and integrate-and-fire neuron models</li>
                     <li>- Model reduction</li>
-                    <li>- Multiple-timescale dynamics</li>
-                    <li>- Neuron models with dynamic ion concentrations</li>
+                    <li>- Markov models of ion channels</li>
                 </ul>
 
                 </p>
