--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <div class="topics">
                 <p><strong>Research interests</strong></p>
                 <p>
-                    I study how changes at the level of individual neurons (ion channels mutation, firing-induced
+                    I study how changes at the level of individual neurons (ion channels mutation, activity-induced
                     fluctuations in ion concentrations) affect their excitability, and the
                     consequences on neuronal networks.</p>
                 <p>
